@@ -34,7 +34,6 @@
  *           - separator  (optional) - ie <br> or &nbsp;
  *           - output     (optional) - the output next to each checkbox
  *           - assign     (optional) - assign the output as an array to this variable
- * @param object $smarty Smarty object
  * @param object $template template object
  * @return string
  * @uses smarty_function_escape_special_chars()
@@ -42,7 +41,6 @@
 function smarty_function_html_checkboxes($params, $template)
 {
     require_once(SMARTY_PLUGINS_DIR . 'shared.escape_special_chars.php');
-    //$smarty->loadPlugin('Smarty_shared_escape_special_chars');
 
     $name = 'checkbox';
     $values = null;
