@@ -16,7 +16,6 @@
   *          (Smarty online manual)
   * @author   Monte Ohrt <monte at ohrt dot com>
   * @param array $params parameters
-  * @param object $smarty Smarty object
   * @param object $template template object
   * @return string 
   */
